<resources>
    <string name="app_name">homework_22</string>
    <string name="title">Title</string>
    <string name="user">User</string>
    <string name="date">Date</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="comment_1">როგორ იცი ხოლმე რა...</string>
    <string name="comments">%d Comments</string>
    <string name="likes">%d Likes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourites">Favourites</string>
    <string name="notifications">Notifications</string>
</resources>