<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:background="@drawable/item_shape_post"
    android:paddingHorizontal="20dp"
    android:paddingVertical="25dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/ivProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/sf_pro_display_light"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/ivProfile"
        app:layout_constraintTop_toBottomOf="@id/tvUser" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/spf_pro_display_medium"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvImages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/dividerOne"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/item_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvImages" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMessages"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_messages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerOne" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="0"
        android:textColor="@color/item_color"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/ivMessages"
        app:layout_constraintTop_toBottomOf="@id/dividerOne" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLikes"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerOne" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="0"
        android:textColor="@color/item_color"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/ivLikes"
        app:layout_constraintTop_toBottomOf="@id/dividerOne" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivShare"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerOne" />

    <View
        android:id="@+id/dividerTwo"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/item_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLikes" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfileComment"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/pfp_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dividerTwo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etComment"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_shape_comment"

        android:hint="@string/write_a_comment"
        android:padding="10dp"
        android:textColorHint="@color/item_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivProfileComment"
        app:layout_constraintTop_toBottomOf="@id/dividerTwo" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnAttachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:src="@drawable/ic_attach"
        app:layout_constraintBottom_toBottomOf="@id/etComment"
        app:layout_constraintEnd_toEndOf="@id/etComment"
        app:layout_constraintTop_toTopOf="@id/etComment" />


</androidx.constraintlayout.widget.ConstraintLayout>